--- a/supa-admin-backend/.env
+++ b/supa-admin-backend/.env
@@ -4,5 +4,5 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 
 # อนุญาต origin ของหน้าเว็บ (ใส่ได้หลายอัน คั่นด้วย comma)
-ALLOWED_ORIGINS=http://127.0.0.1:5500,http://localhost:5500
+ALLOWED_ORIGINS=https://web-qr-test-github-io.vercel.app
 PORT=8000
